--- a/html/html.html
+++ b/html/html.html
@@ -24,7 +24,7 @@
 			height: 100%;
 			display: block;
 			max-width: 1400px;
-			padding: 230px;
+			padding: 60px;
 		}
 
 		.logo {
@@ -32,7 +32,7 @@
 		}
 
 		.sizing_panel {
-			padding: 5px;
+			/* padding: 5px; */
 			/* background: rgba(127, 127, 127, 0.4); */
 		}
 
@@ -44,8 +44,8 @@
 			width: 220px;
 			/* margin: 5px; */
 			background: #3e3e3e;
-			border: 3px outset #7cbaf182;
-			border-radius: 3px;
+			border: 3px outset #276ead82;
+			border-radius: 8px;
 			/* outline: 2px outset #616b7880; */
 			/* box-shadow: 0 0 3px #bd7426; */
 		}
@@ -53,17 +53,17 @@
 		.generic_button>div {
 			display: block;
 			background: #262324;
-			border: 2px outset #958a00;
-			border-radius: 2px;
+			border: 2px outset #867f3182;
+			border-radius: 4px;
 			text-align: center;
-			padding: 3px;
+			padding: 4px;
 		}
 
 		.generic_area {
 			display: inline-block;
 			font-size: 18.72px;
-			background: #495c62c4;
-			background: #7f7f7f;
+			/* background: #495c62c4; */
+			/* background: #7f7f7f; */
 			border: 1px outset #b6b6b680;
 			border-radius: 2px;
 			padding: 16px;
@@ -83,7 +83,7 @@
 			<br />
 			<br />
 			<div class="generic_button" style="width: 240px">
-				<div>Begin</div>
+				<div>Start</div>
 			</div>
 		</div>
 	</body2>
