--- a/html/html.html
+++ b/html/html.html
@@ -38,25 +38,33 @@
 
 		.generic_button {
 			display: inline-block;
-			font-size: 18.72px;
-			color: gold;
-			/* text-shadow: 0 0 4px #727272; */
 			width: 220px;
 			/* margin: 5px; */
-			background: #3e3e3e;
-			border: 3px outset #276ead82;
-			border-radius: 8px;
+			/* background: #3e3e3e; */
+			border: 3px outset #26649a;
+			border-radius: 7px;
 			/* outline: 2px outset #616b7880; */
 			/* box-shadow: 0 0 3px #bd7426; */
 		}
 
 		.generic_button>div {
 			display: block;
-			background: #262324;
-			border: 2px outset #867f3182;
+			/* background: #262324; */
+			border: 2px outset #42668675;
 			border-radius: 4px;
 			text-align: center;
-			padding: 4px;
+		}
+
+		.generic_button>div>span {
+			display: block;
+			font-size: 18.72px;
+			color: gold;
+			/* text-shadow: 0 0 4px #727272; */
+			background: #2a2a2a;
+			background: #25333e;
+			border: 1px outset #589a8c8a;
+			border-radius: 3px;
+			padding: 0px;
 		}
 
 		.generic_area {
@@ -66,7 +74,7 @@
 			/* background: #7f7f7f; */
 			border: 1px outset #b6b6b680;
 			border-radius: 2px;
-			padding: 16px;
+			padding: 15px;
 		}
 	</style>
 </head>
@@ -78,12 +86,12 @@
 		<br />
 		<div class="sizing_panel">
 			<div class="generic_area" style="width: 500px">
-				A cackle broke through the air, giving Charity a fright.
+				My entire council is nothing but a pack of spies.
 			</div>
 			<br />
 			<br />
 			<div class="generic_button" style="width: 240px">
-				<div>Start</div>
+				<div><span>Start</span></div>
 			</div>
 		</div>
 	</body2>
