start button looks ok

--- a/html/html.html
+++ b/html/html.html
@@ -40,18 +40,18 @@
 			display: inline-block;
 			width: 220px;
 			/* margin: 5px; */
-			/* background: #3e3e3e; */
-			border: 3px outset #26649a;
-			border-radius: 7px;
+			background: #3e8aff;
+			border: 3px outset #616161ba;
+			border-radius: 9px;
 			/* outline: 2px outset #616b7880; */
-			/* box-shadow: 0 0 3px #bd7426; */
+			box-shadow: 0 0 8px #272727;
 		}
 
 		.generic_button>div {
 			display: block;
-			/* background: #262324; */
-			border: 2px outset #42668675;
-			border-radius: 4px;
+			background: #151515eb;
+			border: 2px outset #2d2d2d2b;
+			border-radius: 6px;
 			text-align: center;
 		}
 
@@ -60,11 +60,9 @@
 			font-size: 18.72px;
 			color: gold;
 			/* text-shadow: 0 0 4px #727272; */
-			background: #2a2a2a;
-			background: #25333e;
-			border: 1px outset #589a8c8a;
-			border-radius: 3px;
-			padding: 0px;
+			border: 1px outset #84848470;
+			border-radius: 5px;
+			padding: 4px;
 		}
 
 		.generic_area {
