--- a/html/html.html
+++ b/html/html.html
@@ -25,6 +25,7 @@
 			display: block;
 			max-width: 1400px;
 			padding: 60px;
+			padding: 330px;
 		}
 
 		.logo {
@@ -40,17 +41,18 @@
 			display: inline-block;
 			width: 220px;
 			/* margin: 5px; */
-			background: #3e8aff;
-			border: 3px outset #616161ba;
+			background: #cacaca;
+			border: 2px outset #284392;
 			border-radius: 9px;
 			/* outline: 2px outset #616b7880; */
 			box-shadow: 0 0 8px #272727;
+			box-sizing: border-box;
 		}
 
 		.generic_button>div {
 			display: block;
-			background: #151515eb;
-			border: 2px outset #2d2d2d2b;
+			background: #011f3eeb;
+			border: 4px outset #2d2d2d2b;
 			border-radius: 6px;
 			text-align: center;
 		}
@@ -62,7 +64,7 @@
 			/* text-shadow: 0 0 4px #727272; */
 			border: 1px outset #84848470;
 			border-radius: 5px;
-			padding: 4px;
+			padding: 6px;
 		}
 
 		.generic_area {
@@ -71,7 +73,7 @@
 			/* background: #495c62c4; */
 			/* background: #7f7f7f; */
 			border: 1px outset #b6b6b680;
-			border-radius: 2px;
+			border-radius: 3px;
 			padding: 15px;
 		}
 	</style>
