--- a/html/wow.html
+++ b/html/wow.html
@@ -41,9 +41,9 @@
 			display: inline-block;
 			width: 220px;
 			/* margin: 5px; */
-			background: #7c7c7c;
-			border: 2px outset #6b6b6b4f;
-			border-radius: 8px;
+			background: #898b91;
+    border: 3px outset #58585863;
+			border-radius: 12px;
 			/* outline: 2px outset #616b7880; */
 			/* box-shadow: 0 0 8px #272727; */
 			box-sizing: border-box;
@@ -51,9 +51,9 @@
 
 		.wow_button>div {
 			display: block;
-			background: #003459;
-			border: 3px outset #4c4c4c3b;
-			border-radius: 7px;
+			background: #003c59;
+			border: 4px outset #1f1f1f2e;
+			border-radius: 8px;
 			text-align: center;
 		}
 
@@ -62,7 +62,8 @@
 			font-size: 18px;
 			color: gold;
 			/* text-shadow: 0 0 4px #727272; */
-			border: 1px outset #84848470;
+			/* border: 1px outset #84848470; */
+			background: linear-gradient(0deg, rgb(127 127 127 / 0%) 0%, rgb(0 0 0 / 0%) 100%);
 			border-radius: 3px;
 			padding: 4px;
 		}
@@ -119,7 +120,7 @@
 			</div>
 			<br />
 			<br />
-			<div class="wow_button" style="width: 240px">
+			<div class="wow_button" style="width: 200px">
 				<div><span>Start</span></div>
 			</div>
 			<br />
