main cleanup renames

--- a/html/wow.html
+++ b/html/wow.html
@@ -61,11 +61,11 @@
 
 		.wow_button>div>span {
 			display: block;
-			font-size: 18px;
+			font-size: 20px;
 			color: gold;
 			/* text-shadow: 0 0 4px #727272; */
-			border: 1px outset #9e9e9e52;
-			/* background: linear-gradient(0deg, rgb(127 127 127 / 0%) 0%, rgb(0 0 0 / 8%) 100%); */
+			/* border: 1px outset #9e9e9e52; */
+			background: linear-gradient(0deg, rgb(127 127 127 / 0%) 0%, rgb(0 0 0 / 8%) 100%);
 			border-radius: 3px;
 			padding: 0px;
 		}
@@ -101,7 +101,7 @@
 			height: 100%;
 			/* height: calc(100% - 3px); */
 			/* border: 1px solid gray; */
-			background: #0086c5;
+			background: #42448ed1;
 		}
 
 		.wow_progress>div:nth-child(2) {
